# zing

./: .coverage  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  suite-smoke.yml
docs/: CONNECT.md  DEVELOPER-GUIDE.md  DIRECT-FLOW.md  FETCH-TROUBLESHOOTING.md  SUITE-SMOKE-CI.md
docs/taste/: EDITING-CRAFT-AND-SPECS.md  INDEX.md  PACKAGING-INTROS-THUMBNAILS.md  RUBRIC-talking-head.md  RUBRIC-tech-launch.md  RUBRIC-vlog.md  TASTE-FRAMEWORK.md  TRANSITIONS-AND-MIX.md  UX-STUDY-AND-SURFACE.md  VIRALITY-SYNTHESIS.md  VIRALITY-TIKTOK.md  VIRALITY-X.md  VIRALITY-instagram.md  VIRALITY-youtube.md
handoff/: LANE-A-STATE.md  LANE-B-STATE.md  MORNING-DIGEST-2026-07-18.md  NOTES-lane-a.md  NOTES-lane-b.md  NOTES-lane-c.md  NOTES-lane-d.md  ORCHESTRATOR-LOG.md  QUEUE.md  ROADMAP.md  S2-GATE-PACK-2026-07-18.md  S2-GATE-lane-b.md  S3-GATE-FULL-FIDELITY-2026-07-20.md  S3-GATE-lane-b.md  S4-GATE-PACK-2026-07-19.md  S5-GATE-2026-07-19.md  S5-INSTALL-GATE-lane-b.md  SPRINT-1-D1.md  SPRINT-2-D2.md  SPRINT-3-D3.md  SPRINT-4-D4.md  SPRINT-5-D5.md  WIZARD-OF-OZ-2026-07-18.md
handoff/prompts/: LANE-A.md  LANE-B.md  LANE-C.md
handoff/research/: ASSIGNMENTS-R1.md  ASSIGNMENTS-R3.md  B-Q3-get-frames-design.md  BREAKDOWN-READABILITY-QA.md  EXAMPLE-DATASET-TRUTH.md  EXAMPLE-DATASET.md  P-C2-BASELINE-2026-07-20.md  PRESET-PACK-REFERENCES.md  PRIOR-ART-OSS.md  R1-exemplar-teardowns.md  R1-lane-a-measurement.md  R1-lane-b-surface-judgment.md  R1-lane-c-render-eval.md  R3-ai-editor-sentiment.md  R3-grok-x-findings.md  R4-taste-corpus-music-sports-edu-product.md  R4-taste-corpus-tech-comedy.md  RAW-FILLER-PRECISION-2026-07-20.md  RAW-FILLER-RECALL-2026-07-20.md  RAW-MODE-SOURCE.md  REFERENCE-CANDIDATES.md  S5-SWEEP-LANE-A.md  SG4-INSTALL-COMMANDS-2026-07-20.md  SG4-MCP-CLIENTS-2026-07-19.md  SG4-MCP-DISTRIBUTION-2026-07-19.md  SG4-MCP-SDK-V2-2026-07-20.md  SG4-MCP-SECURITY-2026-07-20.md  SG4-MCP-SPEC-2026-07-19.md  pc2_baseline.py  (+10 more)
packaging/: build_mcpb.py  clean_host_check.py  mcp_stdio_smoke.py
presets/: ai-tech-talking-head-vertical.json  informative-explainer.json
prompts/: compare.md  direct.md  study.md  taste.md
tests/: conftest.py  test_ag_research_audit_evidence.py  test_assemble_draft.py  test_ci_ffmpeg_gate.py  test_clean_host_gate.py  test_cli.py  test_direction_render.py  test_docs_command_paths.py  test_doctor.py  test_engagement.py  test_eval_audio_delivery.py  test_eval_collateral_review.py  test_eval_cross_review.py  test_eval_direction_format.py  test_eval_failure_honesty.py  test_eval_performance.py  test_eval_preset_packs.py  test_eval_prior_art.py  test_eval_profiles.py  test_eval_queue_proposals.py  test_eval_raw_footage.py  test_eval_real_videos.py  test_eval_runner.py  test_eval_scoring.py  test_eval_suite_smoke.py  test_eval_transitions.py  test_eval_voiceover.py  test_integration_docs_contract.py  test_launch_dry_run_evidence.py  test_mcp_frames.py  test_mcp_handlers.py  test_mcp_liveness.py  test_mcp_profiles.py  test_mcp_render_tools.py  test_mcp_stdio.py  test_mcpb_staging.py  test_overlay_rule_against_labels.py  test_packaged_data.py  test_packaging_metadata.py  test_profile_api.py  (+41 more)
(+146 files in other folders)
