[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myzing"
version = "0.1.0"
description = "Zing: the video director. Reverse-engineers the editing style of short videos you admire, directs your raw footage with gap reports and shot prompts, and assembles the edit locally."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mcp>=1.2"]
study = ["scenedetect-headless>=0.7", "faster-whisper>=1.1"]
mcp = ["mcp>=1.2"]
all = ["myzing[study]", "myzing[mcp]"]

[project.scripts]
zing = "myzing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
