[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "myzing"
version = "0.1.0"
description = "Zing: the video director. Reverse-engineers the editing style of short videos you admire, directs your raw footage with gap reports and shot prompts, and assembles the edit locally."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mcp>=1.2,<2", "myzing[render]"]
study = [
    "yt-dlp[default]>=2026.6",
    "scenedetect-headless>=0.7",
    "faster-whisper>=1.1",
    "onnxruntime>=1.16",
    "rapidocr>=3.9",
]
# Upper bound is deliberate and dated. SDK v2 (beta 2.0.0b1, stable
# expected with the 2026-07-28 spec) removes mcp.server.fastmcp —
# FastMCP became mcp.server.mcpserver.MCPServer. zing targets the v1
# API, so an unbounded pin would hand every NEW user a broken server the
# day v2 ships. The SDK's own migration note tells library maintainers to
# do exactly this. Raising it is a deliberate port, not a version bump.
mcp = ["mcp>=1.2,<2"]
render = ["pysubs2>=1.8.1"]
all = ["myzing[study]", "myzing[mcp]", "myzing[render]"]

[project.scripts]
zing = "myzing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
myzing = ["_data/prompts/*.md", "_data/presets/*.json", "_data/docs/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
